# actualBrowser

./: CMakeLists.txt
browser/: BasicConsoleBrowser.cpp  BasicConsoleBrowser.h  Browser.cpp  Browser.h  Connector.cpp  Connector.h  Requester.cpp  Requester.h  main.cpp
browser/Connections/: Connection.cpp  Connection.h  SSLConnection.cpp  SSLConnection.h
browser/Display/: Display.cpp  Display.h
browser/Display/Graphical/: GUIDisplay.cpp  GUIDisplay.h  RayGUIDisplay.cpp  RayGUIDisplay.h
browser/Display/TextBased/: BasicConsoleDisplay.cpp  BasicConsoleDisplay.h
browser/Graphical/: GraphicalBrowser.cpp  GraphicalBrowser.h  structs.h
browser/Networking/: Connector.cpp  Connector.h  Networker.cpp  Networker.h  Requester.cpp  Requester.h
browser/Networking/Connections/: Connection.cpp  Connection.h  SSLConnection.cpp  SSLConnection.h
browser/Networking/Errors/: failed_handshake.h
browser/Networking/URL/: URL.cpp  URL.h
browser/URL/: URL.cpp  URL.h
daytime_client/: main.cpp
daytime_server/: daytime_server.cpp
